Updated report and created a new fake payment system
